# aura-core

./: .gitignore  README.md  product_strategy_aura_desktop.md  pyproject.toml  requirements.txt  setup.py
aura/: __init__.py  compiler.py  loader.py  memory.py  torch.py
examples/: basic_compile.py
integrations/aura-claude-code/: CLAUDE.md  README.md
integrations/aura-codex/: README.md  SKILL.md
integrations/aura-gemini-cli/: GEMINI.md  README.md
integrations/aura-landing/: index.html
integrations/aura-landing/.firebase/: hosting..cache
integrations/aura-openclaw/: README.md  SKILL.md
