[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auralith-aura"
version = "0.2.3"
description = "The Universal Context Compiler for AI Agent Memory"
readme = "README.md"
license = {text = "Apache-2.0 AND Proprietary"}
requires-python = ">=3.8"
authors = [
    {name = "Auralith Inc.", email = "info@auralith.org"}
]
keywords = ["ai", "agent-memory", "rag", "retrieval-augmented-generation", "context-compiler", "openclaw", "claude-code", "codex", "gemini-cli", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "msgpack>=1.0.0",
    "safetensors>=0.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
docs = [
    "unstructured>=0.10.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
]
data = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
]
all = [
    "auralith-aura[docs,data]",
    "unstructured[all-docs]>=0.10.0",
]
dev = ["pytest>=7.0.0", "black>=22.0.0", "isort>=5.10.0"]

[project.scripts]
aura = "aura.compiler:main"

[project.urls]
Homepage = "https://aura.auralith.org"
Documentation = "https://github.com/Auralith-Inc/aura-core#readme"
Repository = "https://github.com/Auralith-Inc/aura-core.git"
Issues = "https://github.com/Auralith-Inc/aura-core/issues"
Changelog = "https://github.com/Auralith-Inc/aura-core/releases"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
